# serverside-wasm-book-code

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: publish-ghcr-images.yaml
app_c/: README.md  ingress.yaml
app_c/backend/: ollama.yaml  wasmcloud-api.yaml
app_c/frontend/: frontend.yaml  index.html
app_c/setup/: cluster-issuer.yaml  wasmcloud-host.yaml
chapter02/hello_world/: Dockerfile  Makefile  README.md
chapter02/hello_world/hello_world_guest/: Cargo.toml  README.md  hello_world_guest.wasm
chapter02/hello_world/hello_world_host/: Cargo.toml
chapter02/smart_cms/wit/: smart_cms.wit
chapter03/hello_world_component/: README.md  greet.wit
chapter03/hello_world_python_host/: README.md  main.py  requirements.txt
chapter03/smart_cms/smartcms_kvstore_guest/: README.md  guest.js
chapter03/smart_cms/smartcms_test_host/: Cargo.toml  README.md
chapter04/composability/: README.md  composability.wasm
chapter04/composability/composability_bin/: Cargo.toml  README.md
chapter04/composability/composability_bin/src/: bindings.rs  main.rs
chapter04/composability/composability_lib/: Cargo.toml
chapter04/composability/wit/: bin.wit  lib.wit
chapter04/hello_world_wasi/: README.md
chapter04/hello_world_wasi/hello_world_wasi_guest/: greet.js
chapter04/hello_world_wasi/hello_world_wasi_host/: Cargo.toml
chapter04/smart_cms/smartcms_kvstore_guest/: README.md  guest.js
chapter04/smart_cms/smartcms_ml_guest/: Cargo.toml  README.md  smartcms_ml_guest.wasm
chapter04/smart_cms/smartcms_ml_guest/src/: bindings.rs  lib.rs
chapter04/smart_cms/smartcms_ml_guest/wit/: world.wit
chapter04/smart_cms/smartcms_test_host/: Cargo.toml  smart_cms.wit  stories.txt
chapter04/wasi02/hello_world_wasi02/: Cargo.toml  README.md
chapter04/wasi02/modules_to_components/: README.md  hello_world_guest.wasm  hello_world_guest_component.wasm  p1-hello_world_guest.wasm  p1-hello_world_guest_component.wasm  wasi_snapshot_preview1.reactor.wasm
chapter04/wasi02/wasi02_lib/: Cargo.toml  README.md
chapter04/wasi02/wasi_virt/: README.md  hello_world_wasi02.wasm  hello_world_wasi02_fully_restricted.wasm  hello_world_wasi02_stdout_allowed.wasm
chapter05/libsql_wasmudf/: Dockerfile  Makefile
chapter05/smart_cms/smartcms_kvstore_guest/: guest.js  kvstore_guest.wit
chapter05/smart_cms/smartcms_ml_guest/: Cargo.toml  README.md  smartcms_ml_guest.wasm
chapter05/smart_cms/smartcms_ml_guest/src/: bindings.rs  lib.rs
chapter05/smart_cms/smartcms_ml_guest/wit/: world.wit
chapter05/smart_cms/smartcms_test_host/: Cargo.toml  README.md  guest.wasm  guest_with_ml.wasm
chapter05/smart_cms/smartcms_test_host/fixture/: README.md  modified_model.onnx
chapter05/smart_cms/smartcms_test_host/fixture/model_inputids_mod/: main.py  model.onnx
chapter05/smart_cms/smartcms_test_host/src/: main.rs
chapter05/wasi_nn_example/: Cargo.toml  README.md  wasi_nn_example.wasm
chapter05/wasi_nn_example/data/: wasi_nn_example.wasm
chapter05/wasi_nn_example/src/: bindings.rs  main.rs
chapter05/wasi_nn_example/wit/: wasi-nn.wit
chapter05/wasi_nn_example_2/: Cargo.toml  Makefile
chapter05/wasi_nn_example_2/data/: wasi_nn_example_2.wasm
chapter05/wasi_nn_example_2/src/: main.rs
chapter05/wasm_udf_example/: Cargo.toml  README.md  wasm_udf_example.wasm
chapter05/wasm_udf_example/data/: create_wasm_udfs.sql
chapter05/wasm_udf_example/src/: lib.rs
chapter05/wasmtime_onnx/: Dockerfile  Makefile
chapter06/hello-world-spin/: Cargo.toml  README.md  spin.toml
chapter06/hello-world-spin/src/: lib.rs
chapter06/hello-world-wasmcloud/: .gitignore  README.md  wadm.yaml
chapter06/smart-cms/: Cargo.toml  README.md  index.html  wadm.yaml  wasmcloud.toml
chapter07/hello-container2wasm/: ubuntu.wasm
chapter07/hello-wasm-container/: Cargo.toml  Dockerfile  README.md  docker-enable-wasm.sh  install-containerd-wasm.sh
chapter07/hello-wasmcloud-container/: README.md  docker-compose.yaml  wadm.yaml
chapter07/wasm-oci/: hello_world_wasi02.wasm  pulled.wasm
chapter08/hello-world-spin/: Cargo.toml  README.md  spin.toml
chapter08/hello-world-wasmcloud/: README.md  wadm.yaml  wasmcloud-host.yaml
chapter08/scaling-spin/: .npmrc  README.md  ingress.yaml  package-lock.json  package.json  spin.toml  webpack.config.js
chapter08/smart-cms/: README.md  wadm.yaml
(+28 files in other folders)
